--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,5 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+Interview/Interview.xcodeproj/project.xcworkspace/contents.xcworkspacedata
+Interview/Interview.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
