--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ fastlane/test_output
 iOSInjectionProject/
 Interview/Interview.xcodeproj/project.xcworkspace/contents.xcworkspacedata
 Interview/Interview.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+Interview/InterviewTests/.DS_Store
