--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@ iOSInjectionProject/
 Interview/Interview.xcodeproj/project.xcworkspace/contents.xcworkspacedata
 Interview/Interview.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
 Interview/InterviewTests/.DS_Store
+Interview/InterviewTests/Feature/.DS_Store
